# RH_ComfyUI

./: .pre-commit-config.yaml  README.md  pyproject.toml
RH_ComfyUI/: __init__.py  version.py
RH_ComfyUI/rh_admin/: __init__.py  commands.py
RH_ComfyUI/rh_audio/: __init__.py
RH_ComfyUI/rh_config/: comfyui_config.py  config_default.py
RH_ComfyUI/rh_draw/: __init__.py
RH_ComfyUI/rh_video/: __init__.py
RH_ComfyUI/utils/: constant.py  model_availability.py  model_knowledge.py  model_registry.py  model_wrapper.py  wrapper.py
RH_ComfyUI/utils/RH/: rh_request.py
RH_ComfyUI/utils/blt/: __init__.py  blt_request.py  request.py
RH_ComfyUI/utils/comfyui/: _request.py  comfyui_api.py  wrapper.py
RH_ComfyUI/utils/database/: models.py
RH_ComfyUI/utils/resource/: RESOURCE_PATH.py
RH_ComfyUI/utils/resource/workflow/图片编辑/: qwen_edit_2511.json
RH_ComfyUI/utils/resource/workflow/图生图/: qwen_2512_with_lora.json
RH_ComfyUI/utils/resource/workflow/图生视频/: wan2.2_image2video.json
RH_ComfyUI/utils/resource/workflow/文生图/: qwen_2512.json
RH_ComfyUI/utils/resource/workflow/文生视频/: wan2.2_text2video.json
RH_ComfyUI/utils/resource/workflow/语音生成/: IndexTTS2.json
RH_ComfyUI/utils/resource/workflow/音乐生成/: ace_step1.5.json
